// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/visualize/Chapter chapter create 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-dialog-mask"
    style="z-index: 1018;"
  >
    <div
      aria-labelledby="pv_id_22_header"
      aria-modal="true"
      class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
      role="dialog"
      style="z-index: 1019;"
    >
      <div
        class="p-dialog-header"
      >
        <span
          class="p-dialog-title"
          id="pv_id_22_header"
        >
          Create a new chapter
        </span>
         
        <div
          class="p-dialog-header-icons"
        >
          <!---->
           
          <button
            aria-label="close"
            class="p-dialog-header-icon p-dialog-header-close p-link"
            tabindex="-1"
            type="button"
          >
            <span
              class="p-dialog-header-close-icon pi pi-times"
            />
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
       
      <div
        class="p-dialog-content"
        style="max-height: 70vh;"
      >
        <form
          class="p-fluid"
        >
          <div
            class="p-field"
          >
            <label
              for="chapterTextField"
            >
              Chapter name
            </label>
             
            <input
              autofocus="autofocus"
              class="p-inputtext p-component"
              id="chapterTextField"
              required="required"
            />
          </div>
           
          <div
            class="lck-form-footer"
          >
            <button
              class="p-button-text p-button-secondary p-button p-component"
              type="button"
            >
              <span
                class="pi pi-times p-button-icon p-button-icon-left"
              />
               
              <span
                class="p-button-label"
              >
                Cancel
              </span>
               
              <!---->
              <span
                class="p-ink"
              />
            </button>
             
            <button
              class="p-button p-component"
              type="submit"
            >
              <span
                class="pi pi-save p-button-icon p-button-icon-left"
              />
               
              <span
                class="p-button-label"
              >
                Save
              </span>
               
              <!---->
              <span
                class="p-ink"
              />
            </button>
          </div>
        </form>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`storyshots components/visualize/Chapter chapter edit 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-dialog-mask"
    style="z-index: 1019;"
  >
    <div
      aria-labelledby="pv_id_23_header"
      aria-modal="true"
      class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
      role="dialog"
      style="z-index: 1020;"
    >
      <div
        class="p-dialog-header"
      >
        <span
          class="p-dialog-title"
          id="pv_id_23_header"
        >
          Edit a chapter
        </span>
         
        <div
          class="p-dialog-header-icons"
        >
          <!---->
           
          <button
            aria-label="close"
            class="p-dialog-header-icon p-dialog-header-close p-link"
            tabindex="-1"
            type="button"
          >
            <span
              class="p-dialog-header-close-icon pi pi-times"
            />
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
       
      <div
        class="p-dialog-content"
        style="max-height: 70vh;"
      >
        <form
          class="p-fluid"
        >
          <div
            class="p-field"
          >
            <label
              for="chapterTextField"
            >
              Chapter name
            </label>
             
            <input
              autofocus="autofocus"
              class="p-inputtext p-component p-filled"
              id="chapterTextField"
              required="required"
            />
          </div>
           
          <div
            class="lck-form-footer"
          >
            <button
              class="p-button-text p-button-secondary p-button p-component"
              type="button"
            >
              <span
                class="pi pi-times p-button-icon p-button-icon-left"
              />
               
              <span
                class="p-button-label"
              >
                Cancel
              </span>
               
              <!---->
              <span
                class="p-ink"
              />
            </button>
             
            <button
              class="p-button p-component"
              type="submit"
            >
              <span
                class="pi pi-save p-button-icon p-button-icon-left"
              />
               
              <span
                class="p-button-label"
              >
                Save
              </span>
               
              <!---->
              <span
                class="p-ink"
              />
            </button>
          </div>
        </form>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;
